IPCEchoBenchmark